# linux-tk

./: README.md  package-lock.json  package.json  vite.config.js
src/: App.vue  featured_apps.json  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/scripts/: configure_flatpak.sh  disable_ubuntu_snap.sh  enable_ubuntu_snap.sh  install_docker.sh  install_nvm.sh  install_resolve.sh  install_virtualbox.sh  install_vscode.sh  isDebian.sh  jetbrains.sh  manage_apt_package.sh  manage_flatpak_package.sh  manage_snap_package.sh
src-tauri/src/: main.rs
