[package]
name = "linux-tool-kit"
version = "0.1.0"
description = "Linux Tool Kit"
authors = ["Rodrigo V Correard"]
edition = "2021"
rust-version = "1.70"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
#name = "tauri_app_lib"
#crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2.0.0-beta.5"

[features]
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
